tests/ui/non-lit.stderr
error: argument must be a single string literal
 --> $DIR/non-lit.rs:6:12
  |
6 |     indoc!(fail);
  |            ^^^^
